--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -2,3 +2,15 @@
   background-color: aqua;
   height: 30px;
 }
+
+.root {
+  flex-grow: 1,
+}
+
+.grow {
+  flex-grow: 1,
+}
+
+.menuButton {
+  margin: 0 20 0 -12;
+}
