--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -40,7 +40,6 @@
 }
 
 .card {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   margin-top: 30px;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -50,7 +49,7 @@
 
   .fa {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    color: #17a2b8;
+    color: rgb(52, 152, 219);
     margin: 10px auto 0 auto;
     font-size: 4em;
     background-color: white;
