--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -57,3 +57,25 @@
     padding: 20px;
   }
 }
+
+.heading {
+  margin-bottom: 1em;
+}
+
+.success {
+
+    .fullwidth-text {
+      font-size: 1.2em;
+    }
+}
+
+.fiftyfifty {
+
+  margin-top: 4em;
+
+  .fiftyImage,
+  .container {
+    width: 80%;
+  }
+}
+
