Simple Footer component (navbar removed)

--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -5,4 +5,19 @@
   color: #FFF;
   margin-bottom: 0;
   padding: $component-spacing;
+
+  a {
+    color: #FFFFFF;
+    &:hover {
+      color: #4ed1ff;
+    }
+  }
+
+  .fa {
+    margin-right: 1em;
+  }
+
+  .copyright {
+    margin: 1.5em 0 0;
+  }
 }
