--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -122,3 +122,11 @@
   background-color: transparent;
 }
 
+.testimonialCard {
+  padding-top: 0;
+}
+
+.blockquote-footer {
+  font-size: 1em;
+  margin-bottom: 1em;
+}
