Updated 2nd section with column arrangement and added 1.2.3. section

--- a/src/Assets/Theme/_theme.scss
+++ b/src/Assets/Theme/_theme.scss
@@ -1,3 +1,8 @@
-$blue: rgb(52, 152, 219);
-$darkBlue: rgb(26, 72, 104);
+
 $component-spacing: 4em;
+
+$smoke: #707070;
+$blue: #56B1BF;
+$darkBlue: #08708A;
+$red: #D73A31;
+$darkest: #032B2F;
