--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -21,9 +21,57 @@
   h4 {
     font-size: 3.5em;
     margin-top: 1.5em;
+    margin-bottom: .5em;
   }
 }
 
+.main-points {
+  h6 {
+    color: $smoke;
+  }
+  .row {
+    margin-bottom: $component-spacing;
+  }
+  .icon {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    .fa {
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      color: white;
+      margin: 10px auto 0 auto;
+      font-size: 4em;
+      background-color: $darkBlue;
+      border-radius: 100%;
+      padding: 20px;
+    }
+  }
+}
+
+.steps {
+  h1 {
+    text-align: center;
+    font-size: 4em;
+    margin-bottom: 1.4em;
+  }
+}
+
+.steps-row {
+  h1 {
+    color: $red;
+    font-size: 7em;
+  }
+}
+
+.charity-card-body {
+  text-align: center;
+}
+
+.charity-amount {
+  font-size: 1.5em;
+  width: 100%;
+  text-align: center;
+}
 .quoteLine {
   text-align: center;
   padding: 1.5em;
@@ -34,34 +82,40 @@
   }
 }
 
-.card-desk {
-  margin: 0;
-}
+//.card-desk {
+//  margin: 0;
+//}
 
 .card-row {
-  align-items: center;
-  justify-content: center;
   padding: $component-spacing 0;
+
+  .card-deck {
+    justify-content: center;
+
+    .card {
+      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+      padding: 2em;
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+      max-width: 400px;
+      margin-right: 1.4em;
+      &:hover {
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+      }
+
+      .fa {
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        color: white;
+        margin: 10px auto 0 auto;
+        font-size: 4em;
+        background-color: $darkBlue;
+        border-radius: 100%;
+        padding: 20px;
+      }
+    }
+  }
 }
 
-.card {
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  padding-top: 2em;
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  &:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  }
 
-  .fa {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    color: $blue;
-    margin: 10px auto 0 auto;
-    font-size: 4em;
-    background-color: #FFF;
-    border-radius: 100%;
-    padding: 20px;
-  }
-}
 
 .heading {
   margin-bottom: 1em;
