Landing Pager version 1

--- a/src/Assets/Theme/_theme.scss
+++ b/src/Assets/Theme/_theme.scss
@@ -1,8 +1,9 @@
 
-$component-spacing: 4em;
+$component-spacing: 7em;
 
 $smoke: #707070;
 $blue: #56B1BF;
 $darkBlue: #08708A;
 $red: #D73A31;
 $darkest: #032B2F;
+$offWhite: #f7f7f7;
