--- a/src/Assets/Theme/_theme.scss
+++ b/src/Assets/Theme/_theme.scss
@@ -7,3 +7,12 @@ $darkBlue: #08708A;
 $red: #D73A31;
 $darkest: #032B2F;
 $offWhite: #f7f7f7;
+
+$primaryBlue: #1F628F;
+$secondaryBlue: #84A9C2;
+
+$lightestBlue: #E0EFFA;
+
+// Highlights
+$brightBlue: #53CDFA;
+$primaryRed: #F52B24;
