--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -6,6 +6,10 @@ p, h1, h2, h3, h4, h5, h6 {
   font-family: 'Lato', sans-serif;
 }
 
+p {
+  line-height: 1.9;
+}
+
 h3 {
   font-size: 2rem;
 }
@@ -14,18 +18,69 @@ h6 {
   font-size: 1.1rem;
 }
 
+.btn-primary {
+  background-color: #53CDFA;
+  border-color: #53CDFA;
+}
+
+.futura-heading {
+  color: #1F628F;
+  font-family: futura-pt-bold, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  text-transform: uppercase;
+}
+
 .center-h1 {
   text-align: center;
   font-size: 3em;
   margin-bottom: 1.4em;
 }
 
-.landing-section {
-  padding: 4em 6em;
+.tavels-image {
+  width: auto;
+  height: 60vh;
+}
 
-  div {
-    padding-bottom: 1.5em;
+.text-highlight {
+  background-color: #FFFFFF;
+  padding: 2em;
+
+  h5 {
+    font-size: 1.1rem;
   }
+  .futura-heading {
+    color: #08708A;
+    font-size: 1.2rem;
+  }
+}
+
+.flex-div {
+  display: flex;
+}
+
+.dreams-image {
+  background-image: url('../../Assets/images/dreams.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 124%;
+  width: auto;
+  position: relative;
+  top: -6%;
+  left: -4%;
+}
+
+.story {
+  background-color: #84A9C2;
+}
+
+.landing-section {
+  padding: 10em 6em;
+
+  .futura-heading {
+    padding-bottom: 1em;
+  }
+
 }
 
 .card-heading {
@@ -47,12 +102,14 @@ h6 {
   margin-bottom: 0;
 }
 .heroTop {
-  background-image: url('../../Assets/images/backlit.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 80% 20%;
-  height: 600px;
+  background: url('../../Assets/images/hero2.png') no-repeat center;
+  background-size: auto 100%;
+  //background-size: cover;
+  //background-repeat: no-repeat;
+  //background-position: 80% 20%;
+  height: 100vh;
   margin-bottom: 0;
+  margin-top: 3em;
 
   .heroTop-container {
     color: #FFF;
@@ -66,7 +123,7 @@ h6 {
   }
 
   h3 {
-    font-size: 2.5em;
+    font-size: 3em;
     margin-top: 1.5em;
     margin-bottom: .5em;
   }
@@ -152,7 +209,7 @@ h6 {
   margin-bottom: 0;
 
   h4 {
-    font-family: 'Playfair Display', serif;
+
     font-size: 1.3em;
     margin: 0;
   }
@@ -190,6 +247,12 @@ h6 {
         .card-title {
           font-size: 1.5em;
           text-align: center;
+          color: #84A9C2;
+        }
+
+        .btn-primary {
+          background-color: #1F628F;
+          border-color: #1F628F;
         }
       }
 
@@ -198,7 +261,7 @@ h6 {
         color: white;
         margin: 10px auto 0 auto;
         font-size: 4em;
-        background-color: #08708A;
+        background-color: #1F628F;
         border-radius: 100%;
         padding: 20px;
         position: relative;
@@ -209,6 +272,26 @@ h6 {
         //border-color: $blue;
       }
     }
+  }
+}
+
+.faq {
+  background-color: #84A9C2;
+
+  .card-header {
+    color: #1F628F;
+    font-family: futura-pt-bold, sans-serif;
+    //font-weight: 700;
+    font-style: normal;
+    text-transform: uppercase;
+  }
+
+  .card-body {
+    font-family: 'Lato', sans-serif;
+  }
+
+  h1 {
+    color: white;
   }
 }
 
@@ -313,8 +396,8 @@ h6 {
 .application-button {
   display: block;
   margin: 2em auto;
-  font-size: 1.4em;
-  width: 9em;
+  font-size: 1.5em;
+  width: 11em;
 }
 
 .blockquote-footer {
