--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -37,7 +37,7 @@ h6 {
   margin-bottom: 1.4em;
 }
 
-.tavels-image {
+.travels-image {
   width: auto;
   height: 60vh;
 }
@@ -66,8 +66,6 @@ h6 {
   height: 124%;
   width: auto;
   position: relative;
-  top: -6%;
-  left: -4%;
 }
 
 .story {
@@ -234,7 +232,6 @@ h6 {
       box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
       transition: all 0.3s cubic-bezier(.25,.8,.25,1);
       max-width: 400px;
-      margin-right: 1.4em;
       &:hover {
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
       }
@@ -414,4 +411,16 @@ h6 {
 .blockquote-footer {
   font-size: 1em;
   margin-bottom: 1em;
+}
+
+@media only screen and (max-width: 800px) {
+  .travels-image {
+    display: none;
+  }
+
+  .data-driven {
+    .img-thumbnail {
+      margin-top: 40px;
+    }
+  }
 }
