--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -100,7 +100,7 @@ h6 {
   margin-bottom: 0;
 }
 .heroTop {
-  background: url('../../Assets/images/hero2.png') no-repeat center;
+  background: url('../../Assets/images/hero2.jpeg') no-repeat center;
   background-size: auto 100%;
   //background-size: cover;
   //background-repeat: no-repeat;
