reduced image size (png --> jpeg)

--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -60,7 +60,7 @@ h6 {
 }
 
 .dreams-image {
-  background-image: url('../../Assets/images/dreams.png');
+  background-image: url('../../Assets/images/dreams.jpeg');
   background-size: contain;
   background-repeat: no-repeat;
   height: 124%;
