--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -100,9 +100,8 @@ h6 {
   margin-bottom: 0;
 }
 .heroTop {
-  margin: 3em auto 0;
-
-
+  margin: 3.2em auto 0;
+  display: block;
 
   //.heroTop-container {
   //  //  color: #FFF;
